--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@
                     />
                     TriviAdmin
                 </a>
+
                 <div
                     id="sign-in-button"
                     data-bs-target="#sign-out-confirm-modal"
@@ -96,8 +97,8 @@
                 </div>
             </div>
         </nav>
-        <!-- Sidebar -->
-        <nav class="sidebar navbar navbar-dark bg-dark">
+        <!-- Bottom bar (mobile)-->
+        <nav class="bottombar navbar navbar-dark bg-dark">
             <ul>
                 <li class="selected">
                     <a href="#">
@@ -117,7 +118,7 @@
             <div id="filter-bar">
                 <!-- Master Category List -->
                 <div class="filter-group">
-                    <label for="master-cat-select" class="filter-label"
+                    <label for="master-cat-select" class="little-label"
                         >master category</label
                     >
                     <div
@@ -125,7 +126,6 @@
                         class="btn-group"
                         role="group"
                     ></div>
-                    <!-- TODO per bootstrap docs, input should be inside label tag -->
                     <input
                         type="radio"
                         class="btn-check"
@@ -143,7 +143,7 @@
                 </div>
                 <!-- Used toggle -->
                 <div class="filter-group">
-                    <label for="used-toggle" class="filter-label">used</label>
+                    <label for="used-toggle" class="little-label">used</label>
                     <label class="switch">
                         <input id="used-toggle" type="checkbox" />
                         <span id="used-toggle-slider" class="slider"></span>
@@ -151,7 +151,7 @@
                 </div>
                 <!-- Category dropdown select -->
                 <div class="filter-group">
-                    <label for="category-select-button" class="filter-label"
+                    <label for="category-select-button" class="little-label"
                         >category</label
                     >
                     <div class="dropdown">
@@ -178,11 +178,10 @@
                 </div>
                 <!-- Point value List -->
                 <div class="filter-group">
-                    <label for="point-select" class="filter-label"
+                    <label for="point-select" class="little-label"
                         >point value</label
                     >
                     <div id="point-select" class="btn-group" role="group"></div>
-                    <!-- TODO per bootstrap docs, input should be inside label tag -->
                     <input
                         type="radio"
                         class="btn-check"
@@ -198,11 +197,52 @@
                         style="display: none"
                     ></label>
                 </div>
+                <div
+                    id="question-loader"
+                    class="lds-ellipsis"
+                    style="display: none"
+                >
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
-            <div id="question-data"></div>
+            <div id="question-data-section">
+                <div class="question-data-group">
+                    <label class="little-label" for="question-text"
+                        >Question</label
+                    >
+                    <div id="question-text" class="question-data"></div>
+                </div>
+
+                <div class="question-data-group">
+                    <label class="little-label" for="multi-choice-text"
+                        >Multiple Choice</label
+                    >
+                    <div id="multi-choice-text" class="question-data"></div>
+                </div>
+
+                <div class="question-data-group">
+                    <label class="little-label" for="answer-text">Answer</label>
+                    <div id="answer-text" class="question-data"></div>
+                </div>
+
+                <div class="question-data-group">
+                    <label class="little-label" for="source-text">Source</label>
+                    <div id="source-text" class="question-data"></div>
+                </div>
+                <div class="question-data-group">
+                    <label class="little-label" for="explanation-text"
+                        >Explanation</label
+                    >
+                    <div id="explanation-text" class="question-data"></div>
+                </div>
+            </div>
             <div id="quick-question-count-bar"></div>
         </div>
 
+        <div id="snackbar">Unknown error</div>
         <!-- <input type="file" onchange="uploadFile(this.files)" /> -->
         <!-- <img id="imgUpload" src="" width="100vw" /> -->
         <script
