--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
             integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
             crossorigin="anonymous"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.css"
+            integrity="sha512-/zs32ZEJh+/EO2N1b0PEdoA10JkdC3zJ8L5FTiQu82LR9S/rOQNfQN7U59U9BC12swNeRAz3HSzIL2vpp4fv3w=="
+            crossorigin="anonymous"
+        />
         <link rel="stylesheet" type="text/css" href="app.css" />
     </head>
     <body>
@@ -114,23 +120,6 @@
                     </div>
                 </div>
             </div>
-        </nav>
-        <!-- Bottom bar (mobile)-->
-        <nav class="bottombar navbar navbar-dark bg-dark">
-            <ul>
-                <li class="selected">
-                    <a href="#">
-                        <i class="material-icons">emoji_events</i>
-                        <span class="nav-text"> Host </span>
-                    </a>
-                </li>
-                <li class="has-subnav">
-                    <a href="#">
-                        <i class="material-icons">mode</i>
-                        <span class="nav-text"> Plan </span>
-                    </a>
-                </li>
-            </ul>
         </nav>
         <div class="main-content">
             <div id="filter-bar">
@@ -289,6 +278,11 @@
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.min.js"
+            integrity="sha512-SuxO9djzjML6b9w9/I07IWnLnQhgyYVSpHZx0JV97kGBfTIsUYlWflyuW4ypnvhBrslz1yJ3R+S14fdCWmSmSA=="
             crossorigin="anonymous"
         ></script>
         <script src="app.js"></script>
