Add initial ChartJS imp

--- a/public/index.html
+++ b/public/index.html
@@ -238,38 +238,47 @@
                     <div></div>
                 </div>
             </div>
-            <div id="question-data-section">
-                <div class="question-data-group">
-                    <label class="little-label" for="question-text"
-                        >Question</label
-                    >
-                    <div id="question-text" class="question-data"></div>
-                </div>
+            <div id="question-section">
+                <div id="question-data-section">
+                    <div class="question-data-group">
+                        <label class="little-label" for="question-text"
+                            >Question</label
+                        >
+                        <div id="question-text" class="question-data"></div>
+                    </div>
 
-                <div class="question-data-group">
-                    <label class="little-label" for="multi-choice-text"
-                        >Multiple Choice</label
-                    >
-                    <div id="multi-choice-text" class="question-data"></div>
-                </div>
+                    <div class="question-data-group">
+                        <label class="little-label" for="multi-choice-text"
+                            >Multiple Choice</label
+                        >
+                        <div id="multi-choice-text" class="question-data"></div>
+                    </div>
 
-                <div class="question-data-group">
-                    <label class="little-label" for="answer-text">Answer</label>
-                    <div id="answer-text" class="question-data"></div>
-                </div>
+                    <div class="question-data-group">
+                        <label class="little-label" for="answer-text"
+                            >Answer</label
+                        >
+                        <div id="answer-text" class="question-data"></div>
+                    </div>
 
-                <div class="question-data-group">
-                    <label class="little-label" for="source-text">Source</label>
-                    <div id="source-text" class="question-data"></div>
+                    <div class="question-data-group">
+                        <label class="little-label" for="source-text"
+                            >Source</label
+                        >
+                        <div id="source-text" class="question-data"></div>
+                    </div>
+                    <div class="question-data-group">
+                        <label class="little-label" for="explanation-text"
+                            >Explanation</label
+                        >
+                        <div id="explanation-text" class="question-data"></div>
+                    </div>
                 </div>
-                <div class="question-data-group">
-                    <label class="little-label" for="explanation-text"
-                        >Explanation</label
-                    >
-                    <div id="explanation-text" class="question-data"></div>
+                <div id="chart-container">
+                    <canvas id="myChart"></canvas>
                 </div>
             </div>
-            <div id="quick-question-count-bar"></div>
+            <!-- <div id="quick-question-count-bar"></div> -->
         </div>
 
         <div id="snackbar">Unknown error</div>
