--- a/public/index.html
+++ b/public/index.html
@@ -529,21 +529,17 @@
                         </button>
                     </div>
                 </div>
-                <div id="chart-container">
+                <div id="chart-container" style="position: relative">
                     <canvas id="pointCountChart"></canvas>
                 </div>
             </div>
-            <div id="questions-table-section" style="display: none">
+            <div id="questions-table-section">
                 <table id="questions-table" class="table">
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Ext.</th>
-                            <th>City</th>
-                            <th data-type="date" data-format="YYYY/MM/DD">
-                                Start Date
-                            </th>
-                            <th>Completion</th>
+                            <th>Question</th>
+                            <th>Answer</th>
+                            <th>Multiple Choice</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -551,29 +547,56 @@
                             <td>Unity Pugh</td>
                             <td>9958</td>
                             <td>Curicó</td>
-                            <td>2005/02/11</td>
-                            <td>37%</td>
                         </tr>
                         <tr>
                             <td>Theodore Duran</td>
                             <td>8971</td>
                             <td>Dhanbad</td>
-                            <td>1999/04/07</td>
-                            <td>97%</td>
                         </tr>
                         <tr>
                             <td>Kylie Bishop</td>
                             <td>3147</td>
                             <td>Norman</td>
-                            <td>2005/09/08</td>
-                            <td>63%</td>
                         </tr>
                         <tr>
                             <td>Willow Gilliam</td>
                             <td>3497</td>
                             <td>Amqui</td>
-                            <td>2009/29/11</td>
-                            <td>30%</td>
+                        </tr>
+                        <tr>
+                            <td>Willow Gilliam</td>
+                            <td>3497</td>
+                            <td>Amqui</td>
+                        </tr>
+                        <tr>
+                            <td>Willow Gilliam</td>
+                            <td>3497</td>
+                            <td>Amqui</td>
+                        </tr>
+                        <tr>
+                            <td>Willow Gilliam</td>
+                            <td>3497</td>
+                            <td>Amqui</td>
+                        </tr>
+                        <tr>
+                            <td>Willow Gilliam</td>
+                            <td>3497</td>
+                            <td>Amqui</td>
+                        </tr>
+                        <tr>
+                            <td>Willow Gilliam</td>
+                            <td>3497</td>
+                            <td>Amqui</td>
+                        </tr>
+                        <tr>
+                            <td>Willow Gilliam</td>
+                            <td>3497</td>
+                            <td>Amqui</td>
+                        </tr>
+                        <tr>
+                            <td>Willow Gilliam</td>
+                            <td>3497</td>
+                            <td>Amqui</td>
                         </tr>
                     </tbody>
                 </table>
