Add editable table on desktop

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             type="text/css"
         />
         <link
-            href="https://cdn.jsdelivr.net/npm/vanilla-datatables-editable@latest/datatable.editable.min.css"
+            href="https://cdn.jsdelivr.net/npm/vanilla-datatables-editable@0.0.10/datatable.editable.min.css"
             rel="stylesheet"
             type="text/css"
         />
@@ -537,68 +537,13 @@
                 <table id="questions-table" class="table">
                     <thead>
                         <tr>
+                            <th>ID</th>
                             <th>Question</th>
                             <th>Answer</th>
                             <th>Multiple Choice</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Unity Pugh</td>
-                            <td>9958</td>
-                            <td>Curicó</td>
-                        </tr>
-                        <tr>
-                            <td>Theodore Duran</td>
-                            <td>8971</td>
-                            <td>Dhanbad</td>
-                        </tr>
-                        <tr>
-                            <td>Kylie Bishop</td>
-                            <td>3147</td>
-                            <td>Norman</td>
-                        </tr>
-                        <tr>
-                            <td>Willow Gilliam</td>
-                            <td>3497</td>
-                            <td>Amqui</td>
-                        </tr>
-                        <tr>
-                            <td>Willow Gilliam</td>
-                            <td>3497</td>
-                            <td>Amqui</td>
-                        </tr>
-                        <tr>
-                            <td>Willow Gilliam</td>
-                            <td>3497</td>
-                            <td>Amqui</td>
-                        </tr>
-                        <tr>
-                            <td>Willow Gilliam</td>
-                            <td>3497</td>
-                            <td>Amqui</td>
-                        </tr>
-                        <tr>
-                            <td>Willow Gilliam</td>
-                            <td>3497</td>
-                            <td>Amqui</td>
-                        </tr>
-                        <tr>
-                            <td>Willow Gilliam</td>
-                            <td>3497</td>
-                            <td>Amqui</td>
-                        </tr>
-                        <tr>
-                            <td>Willow Gilliam</td>
-                            <td>3497</td>
-                            <td>Amqui</td>
-                        </tr>
-                        <tr>
-                            <td>Willow Gilliam</td>
-                            <td>3497</td>
-                            <td>Amqui</td>
-                        </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
             <div id="quick-question-count-bar"></div>
@@ -622,7 +567,7 @@
             type="text/javascript"
         ></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/vanilla-datatables-editable@latest/datatable.editable.min.js"
+            src="https://cdn.jsdelivr.net/npm/vanilla-datatables-editable@0.0.10/datatable.editable.min.js"
             type="text/javascript"
         ></script>
         <script src="app.js"></script>
