Optimize planning for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -529,7 +529,7 @@
                         </button>
                     </div>
                 </div>
-                <div id="chart-container" style="position: relative">
+                <div id="chart-container">
                     <canvas id="pointCountChart"></canvas>
                 </div>
             </div>
