change mobile chart icon

--- a/public/index.html
+++ b/public/index.html
@@ -510,7 +510,7 @@
                             Mark Used
                         </button>
                         <span id="show-chart-button" class="material-icons">
-                            keyboard_arrow_up
+                            bar_chart
                         </span>
                         <button
                             class="btn btn-outline-primary btn-action"
